# pymidiate

./: .gitignore  LICENSE  README.md  devel.py  py-bach.py  py-g1on-1.py  py-g1on-2.py  py-g1on3.py  py-js.py  py-mask.py  py-mod.py  py-monitor.py  py-octave.py  py-sol-1.py  py-st-buzzer.py  py-sustainer.py  py-thru.py  py-trans.py  py-zoom-monitor.py  py-zoom.py  py-zoom2.py  setup.cfg
dev/: MANIFEST.in  devel.py  py-bach.py  py-list.py  py-mask.py  py-mod.py  py-monitor.py  py-octave.py  py-st-buzzer.py  py-thru-only-notes.py  py-thru.py  setup.cfg
dev/midiate/: __init__.py  midiate.py
midiate/: __init__.py  midiate.py
midiate/zoom/g1on/: __init__.py  core.py  g1on.py
samples/: devel.py  py-list.py  py-monitor.py  py-sustainer.py
