; -*- coding: utf-8 -*-
[metadata]
name = pymidiate
version = 0.0.9
url = https://github.com/PGkids/pymidiate
author = PGkids Laboratory
author_email = lab@pgkids.co.jp
license = MIT
description = pymidiate: MIDI front-end for Python
;long_description = file: README.md

[options]
zip_safe = False
packages = find:
include_package_data = True
;entry_points = file: entry_points.cfg