; -*- coding: utf-8 -*-
[metadata]
name = pyMidiate
version = 0.0.9
url = https://github.com/PGkids/pyMidiate
author = PGkids Laboratory
author_email = lab@pgkids.co.jp
license = MIT
description = pymidiate: MIDI front-end
;long_description = file: README.md

[options]
zip_safe = False
packages = find:
;entry_points = file: entry_points.cfg